--- a/MovieDB/MovieDB/Info.plist
+++ b/MovieDB/MovieDB/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>MV_PASS</key>
+	<string>$(MV_PASS)</string>
+	<key>MV_USER</key>
+	<string>$(MV_USER)</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>RadioCanada-SemiBold.ttf</string>
